fix order page on mobile

--- a/src/Pages/Orders/index.module.css
+++ b/src/Pages/Orders/index.module.css
@@ -74,3 +74,13 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .container{
+    padding: 128px 16px;
+    }
+    .payment {
+        margin: 0 auto;
+    }
+}
+
